Fixed body width on mobiles again

--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,5 @@
 body {
     max-width: 100vw;
-    overflow: hidden;
 }
 
 header {
@@ -53,7 +52,7 @@ header > .topnav {
     margin: 0;
     align-content: center;
     padding: 0;
-    transition: 1s;
+/*     transition: 1s; */
 }
 
 header > .topnav > li {
@@ -139,25 +138,24 @@ header > .topnav > li > a:hover::after {
     }
     header > .topnav {
         position: absolute;
+        overflow: hidden;
         flex-direction: column;
         top: 100%;
-        left: 100%;
+        right: 0;
         z-index: 10;
         font-size: 300%;
     }
     header > .topnav > li {
         position: relative;
-        left: 0;
+        left: 100%;
         margin: 0;
-        transition: 1s;
+        transition: left 1s;
         background: #d3d3d363;
         backdrop-filter: blur(4px);
         
     }
 
     header > .topnav > .topnav-open {
-        position: relative;
-        display: inline;
-        left: -100%;
+        left: 0;
     }
 }
